[gd_scene load_steps=15 format=3 uid="uid://cekhruau50dl8"]

[ext_resource type="Script" path="res://Scenes/Menues/Character_Select_Screen/character_select_screen.gd" id="1_13toc"]
[ext_resource type="Texture2D" uid="uid://ux5u7qhxxkau" path="res://Graphics/BG/Char_Select_BG_no-light_1x.png" id="2_7xld5"]
[ext_resource type="Theme" uid="uid://6yidb12fyc8i" path="res://Themes/UI_TEXT_BUTTON_THEME.tres" id="3_2rlyx"]
[ext_resource type="Texture2D" uid="uid://ct1etpd1eytb5" path="res://Graphics/BG/LeftSpotlight.png" id="3_6egn6"]
[ext_resource type="Texture2D" uid="uid://ogpf7vucv8qj" path="res://Graphics/Characters/Locked_Character_1x.png" id="4_80qt6"]
[ext_resource type="Texture2D" uid="uid://bkfxpd6yafhv3" path="res://Graphics/BG/RightSpotlight.png" id="4_jvui0"]
[ext_resource type="Texture2D" uid="uid://bbffpbjwawei" path="res://Graphics/Characters/DANI_DANCER/Character_Select/Dani_Select_30p_1x.png" id="5_5l7q0"]
[ext_resource type="Texture2D" uid="uid://bm2a2wwt2q6ub" path="res://Graphics/Characters/DANI_DANCER/Character_Select/Dani_Select_90p_1x.png" id="6_xah7f"]
[ext_resource type="Texture2D" uid="uid://cm3vh07ehyy6i" path="res://Graphics/Characters/ASTA_ASTROLOGIAN/Character_Select/Asta_Select_30p_1x.png" id="7_jckck"]
[ext_resource type="Texture2D" uid="uid://b61f7t680gvk7" path="res://Graphics/Characters/DANI_DANCER/Character_Select/Dani_Select_60p_1x.png" id="7_xjinc"]
[ext_resource type="Texture2D" uid="uid://c6fb0gfhs0scs" path="res://Graphics/Characters/ASTA_ASTROLOGIAN/Character_Select/Asta_Select_90p_1x.png" id="8_fmwsm"]
[ext_resource type="Texture2D" uid="uid://chcm502wq0vd6" path="res://Graphics/Characters/ASTA_ASTROLOGIAN/Character_Select/Asta_Select_60p_1x.png" id="9_qv5fv"]
[ext_resource type="Texture2D" uid="uid://cnaj47nhyvldr" path="res://Graphics/Characters/ASTA_ASTROLOGIAN/Ability_Icons/ICON_Card_Draw_1x.png" id="13_qtujh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d33lr"]
bg_color = Color(0, 0, 0, 0.258824)

[node name="Character_Select_Screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_13toc")

[node name="TR_BG" type="TextureRect" parent="."]
light_mask = 8
visibility_layer = 8
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7xld5")
expand_mode = 1

[node name="PL_Left_Light" type="PointLight2D" parent="TR_BG"]
light_mask = 9
energy = 0.8
range_item_cull_mask = 9
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.54902)
shadow_item_cull_mask = 3
texture = ExtResource("3_6egn6")
offset = Vector2(640, 320)

[node name="PL_Right_Spotlight" type="PointLight2D" parent="TR_BG"]
light_mask = 9
position = Vector2(1280, 0)
energy = 0.8
range_item_cull_mask = 9
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.54902)
shadow_item_cull_mask = 3
texture = ExtResource("4_jvui0")
offset = Vector2(-640, 320)

[node name="TR_Player_Placeholder" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 80.0
offset_right = 20.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_80qt6")

[node name="HB_Container" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -172.0
offset_right = 68.0
offset_bottom = 172.0
grow_vertical = 2

[node name="VB_Character_Buttons" type="VBoxContainer" parent="HB_Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ARC1" type="AspectRatioContainer" parent="HB_Container/VB_Character_Buttons"]
layout_mode = 2

[node name="BTN_Dani" type="TextureButton" parent="HB_Container/VB_Character_Buttons/ARC1"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
texture_normal = ExtResource("5_5l7q0")
texture_pressed = ExtResource("6_xah7f")
texture_hover = ExtResource("7_xjinc")
texture_focused = ExtResource("6_xah7f")

[node name="ARC2" type="AspectRatioContainer" parent="HB_Container/VB_Character_Buttons"]
layout_mode = 2

[node name="BTN_Asta" type="TextureButton" parent="HB_Container/VB_Character_Buttons/ARC2"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
texture_normal = ExtResource("7_jckck")
texture_pressed = ExtResource("8_fmwsm")
texture_hover = ExtResource("9_qv5fv")
texture_focused = ExtResource("8_fmwsm")

[node name="ARC3" type="AspectRatioContainer" parent="HB_Container/VB_Character_Buttons"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="HB_Container/VB_Character_Buttons/ARC3"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
texture_normal = ExtResource("4_80qt6")

[node name="ARC4" type="AspectRatioContainer" parent="HB_Container/VB_Character_Buttons"]
layout_mode = 2

[node name="TextureButton2" type="TextureButton" parent="HB_Container/VB_Character_Buttons/ARC4"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
texture_normal = ExtResource("4_80qt6")

[node name="ARC5" type="AspectRatioContainer" parent="HB_Container/VB_Character_Buttons"]
layout_mode = 2

[node name="TextureButton3" type="TextureButton" parent="HB_Container/VB_Character_Buttons/ARC5"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
texture_normal = ExtResource("4_80qt6")

[node name="MC_PU_Char_Details" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Total_Panel" type="Panel" parent="MC_PU_Char_Details"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_d33lr")

[node name="MC_Ability_Descriptions" type="MarginContainer" parent="MC_PU_Char_Details/Total_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 350
theme_override_constants/margin_bottom = 5

[node name="TabContainer" type="TabContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions"]
layout_mode = 2
current_tab = 0

[node name="Set 1" type="VBoxContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer"]
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="P_AB1" type="HBoxContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1"]
layout_mode = 2

[node name="TR_AB1" type="TextureRect" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB1"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_qtujh")
stretch_mode = 4

[node name="RTL_AB1" type="RichTextLabel" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB1"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 3
text = "Abiliity 
Long 
Description"
fit_content = true
scroll_active = false

[node name="P_AB2" type="HBoxContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1"]
layout_mode = 2
size_flags_vertical = 0

[node name="TR_AB2" type="TextureRect" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB2"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_qtujh")
stretch_mode = 4

[node name="RTL_AB2" type="RichTextLabel" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB2"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 3
text = "Abiliity 
Long 
Description"
fit_content = true
scroll_active = false

[node name="P_AB3" type="HBoxContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1"]
layout_mode = 2

[node name="TR_AB3" type="TextureRect" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB3"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_qtujh")
stretch_mode = 4

[node name="RTL_AB3" type="RichTextLabel" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB3"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 3
text = "Abiliity 
Long 
Description"
fit_content = true
scroll_active = false

[node name="P_AB4" type="HBoxContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1"]
layout_mode = 2

[node name="TR_AB4" type="TextureRect" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB4"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("13_qtujh")
stretch_mode = 4

[node name="RTL_AB4" type="RichTextLabel" parent="MC_PU_Char_Details/Total_Panel/MC_Ability_Descriptions/TabContainer/Set 1/P_AB4"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
size_flags_horizontal = 3
text = "Abiliity
Long
Description"
fit_content = true
scroll_active = false

[node name="MC_Stat_Block" type="MarginContainer" parent="MC_PU_Char_Details/Total_Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 350
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 150

[node name="TabContainer" type="TabContainer" parent="MC_PU_Char_Details/Total_Panel/MC_Stat_Block"]
layout_mode = 2
current_tab = 0

[node name="Stat Block" type="RichTextLabel" parent="MC_PU_Char_Details/Total_Panel/MC_Stat_Block/TabContainer"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
text = "Stats and stuff"
metadata/_tab_index = 0

[node name="MC_Select" type="MarginContainer" parent="MC_PU_Char_Details/Total_Panel"]
light_mask = 16
visibility_layer = 16
custom_minimum_size = Vector2(50, 30)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -30.0
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="BTN_Select" type="Button" parent="MC_PU_Char_Details/Total_Panel/MC_Select"]
light_mask = 16
visibility_layer = 16
custom_minimum_size = Vector2(50, 20)
layout_mode = 2
text = "SELECT"

[node name="MC_Debug_Btn" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_bottom = 45.0
grow_horizontal = 0
theme = ExtResource("3_2rlyx")
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="BTN_Debug" type="Button" parent="MC_Debug_Btn"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
text = "DEBUG"

[node name="MC_Play_Btn" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_top = 45.0
offset_bottom = 90.0
grow_horizontal = 0
theme = ExtResource("3_2rlyx")
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="BTN_Play" type="Button" parent="MC_Play_Btn"]
light_mask = 16
visibility_layer = 16
layout_mode = 2
text = "PLAY"

[connection signal="pressed" from="HB_Container/VB_Character_Buttons/ARC1/BTN_Dani" to="." method="_on_btn_dani_pressed"]
[connection signal="pressed" from="HB_Container/VB_Character_Buttons/ARC2/BTN_Asta" to="." method="_on_btn_asta_pressed"]
[connection signal="pressed" from="MC_PU_Char_Details/Total_Panel/MC_Select/BTN_Select" to="." method="_on_select_btn_pressed"]
[connection signal="pressed" from="MC_Debug_Btn/BTN_Debug" to="." method="_on_btn_debug_pressed"]
[connection signal="pressed" from="MC_Play_Btn/BTN_Play" to="." method="_on_play_btn_pressed"]
